include/El/matrices.h

/* Deterministic
   ############# */

/* Bull's head
   =========== */
EL_EXPORT ElError ElBullsHead_c( ElMatrix_c A, ElInt n );
EL_EXPORT ElError ElBullsHead_z( ElMatrix_z A, ElInt n );
EL_EXPORT ElError ElBullsHeadDist_c( ElDistMatrix_c A, ElInt n );
EL_EXPORT ElError ElBullsHeadDist_z( ElDistMatrix_z A, ElInt n );
/* Cauchy
   ====== */
EL_EXPORT ElError ElCauchy_s
( ElMatrix_s A, ElInt xSize, float* xBuf,
                ElInt ySize, float* yBuf );
 
EL_EXPORT ElError ElCauchy_d
( ElMatrix_d A, ElInt xSize, double* xBuf,
                ElInt ySize, double* yBuf );
 
EL_EXPORT ElError ElCauchy_c
( ElMatrix_c A, ElInt xSize, complex_float* xBuf,
                ElInt ySize, complex_float* yBuf );
 
EL_EXPORT ElError ElCauchy_z
( ElMatrix_z A, ElInt xSize, complex_double* xBuf,
                ElInt ySize, complex_double* yBuf );
 

EL_EXPORT ElError ElCauchyDist_s
( ElDistMatrix_s A, ElInt xSize, float* xBuf,
                    ElInt ySize, float* yBuf );
 
EL_EXPORT ElError ElCauchyDist_d
( ElDistMatrix_d A, ElInt xSize, double* xBuf,
                    ElInt ySize, double* yBuf );
 
EL_EXPORT ElError ElCauchyDist_c
( ElDistMatrix_c A, ElInt xSize, complex_float* xBuf,
                    ElInt ySize, complex_float* yBuf );
 
EL_EXPORT ElError ElCauchyDist_z
( ElDistMatrix_z A, ElInt xSize, complex_double* xBuf,
                    ElInt ySize, complex_double* yBuf );
 

/* Cauchy-like
   =========== */
EL_EXPORT ElError ElCauchyLike_s
( ElMatrix_s A, ElInt rSize, float* rBuf,
                ElInt sSize, float* sBuf,
                ElInt xSize, float* xBuf,
                ElInt ySize, float* yBuf );
 
EL_EXPORT ElError ElCauchyLike_d
( ElMatrix_d A, ElInt rSize, double* rBuf,
                ElInt sSize, double* sBuf,
                ElInt xSize, double* xBuf,
                ElInt ySize, double* yBuf );
 
EL_EXPORT ElError ElCauchyLike_c
( ElMatrix_c A, ElInt rSize, complex_float* rBuf,
                ElInt sSize, complex_float* sBuf,
                ElInt xSize, complex_float* xBuf,
                ElInt ySize, complex_float* yBuf );
 
EL_EXPORT ElError ElCauchyLike_z
( ElMatrix_z A, ElInt rSize, complex_double* rBuf,
                ElInt sSize, complex_double* sBuf,
                ElInt xSize, complex_double* xBuf,
                ElInt ySize, complex_double* yBuf );
 

EL_EXPORT ElError ElCauchyLikeDist_s
( ElDistMatrix_s A, ElInt rSize, float* rBuf,
                    ElInt sSize, float* sBuf,
                    ElInt xSize, float* xBuf,
                    ElInt ySize, float* yBuf );
 
EL_EXPORT ElError ElCauchyLikeDist_d
( ElDistMatrix_d A, ElInt rSize, double* rBuf,
                    ElInt sSize, double* sBuf,
                    ElInt xSize, double* xBuf,
                    ElInt ySize, double* yBuf );
 
EL_EXPORT ElError ElCauchyLikeDist_c
( ElDistMatrix_c A, ElInt rSize, complex_float* rBuf,
                    ElInt sSize, complex_float* sBuf,
                    ElInt xSize, complex_float* xBuf,
                    ElInt ySize, complex_float* yBuf );
 
EL_EXPORT ElError ElCauchyLikeDist_z
( ElDistMatrix_z A, ElInt rSize, complex_double* rBuf,
                    ElInt sSize, complex_double* sBuf,
                    ElInt xSize, complex_double* xBuf,
                    ElInt ySize, complex_double* yBuf );
 

/* Circulant
   ========= */
EL_EXPORT ElError ElCirculant_i
( ElMatrix_i A, ElInt aSize, ElInt* aBuf );
EL_EXPORT ElError ElCirculant_s
( ElMatrix_s A, ElInt aSize, float* aBuf );
EL_EXPORT ElError ElCirculant_d
( ElMatrix_d A, ElInt aSize, double* aBuf );
EL_EXPORT ElError ElCirculant_c
( ElMatrix_c A, ElInt aSize, complex_float* aBuf );
EL_EXPORT ElError ElCirculant_z
( ElMatrix_z A, ElInt aSize, complex_double* aBuf );
EL_EXPORT ElError ElCirculantDist_i
( ElDistMatrix_i A, ElInt aSize, ElInt* aBuf );
EL_EXPORT ElError ElCirculantDist_s
( ElDistMatrix_s A, ElInt aSize, float* aBuf );
EL_EXPORT ElError ElCirculantDist_d
( ElDistMatrix_d A, ElInt aSize, double* aBuf );
EL_EXPORT ElError ElCirculantDist_c
( ElDistMatrix_c A, ElInt aSize, complex_float* aBuf );
EL_EXPORT ElError ElCirculantDist_z
( ElDistMatrix_z A, ElInt aSize, complex_double* aBuf );
/* Demmel
   ====== */
EL_EXPORT ElError ElDemmel_s( ElMatrix_s A, ElInt n );
EL_EXPORT ElError ElDemmel_d( ElMatrix_d A, ElInt n );
EL_EXPORT ElError ElDemmel_c( ElMatrix_c A, ElInt n );
EL_EXPORT ElError ElDemmel_z( ElMatrix_z A, ElInt n );
EL_EXPORT ElError ElDemmelDist_s( ElDistMatrix_s A, ElInt n );
EL_EXPORT ElError ElDemmelDist_d( ElDistMatrix_d A, ElInt n );
EL_EXPORT ElError ElDemmelDist_c( ElDistMatrix_c A, ElInt n );
EL_EXPORT ElError ElDemmelDist_z( ElDistMatrix_z A, ElInt n );